--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,7 @@
     </dependencies>
 
 	<build>
+		<finalName>bs-api</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
