--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,6 @@ spring:
   application:
     name: Personal budgeting API
   r2dbc:
-    url: r2dbc:postgresql://db:5432/test
-    username: postgres
-    password: password
+    url: r2dbc:h2:mem:///testdb;DB_CLOSE_DELAY=-1
+    username: sa
+    password:
